--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,3 +35,5 @@ jobs:
 
       - name: Codecov
         uses: codecov/codecov-action@v3
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
